# bacchus-gpu-controller

./: .dockerignore  Cargo.toml  Dockerfile  README.md  generate-crd.sh  index.yaml
.github/workflows/: check-crd-status.yml  ci.yml  release-chart.yml
charts/bacchus-gpu-controller/: Chart.yaml  values.yaml
charts/bacchus-gpu-controller/templates/: _helpers.tpl  certificate.yaml  crd.yaml  default-roles.yaml  deployment.yaml  serviceaccount.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml  serviceaccount.yaml  webhook.yaml
src/: admission.rs  controller.rs  crd.rs  crdgen.rs  synchronizer.rs
