[package]
name = "bacchus-gpu-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
name = "controller"
path = "src/controller.rs"

[[bin]]
name = "admission"
path = "src/admission.rs"

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
envy = "0.4.2"
futures = "0.3.28"
json-patch = "1.0.0"
k8s-openapi = { version = "0.18.0", features = ["v1_26", "schemars"] }
kube = { version = "0.84.0", default-features = false, features = ["runtime", "derive", "rustls-tls", "admission", "client"] }
schemars = "0.8.12"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.23"
sha256 = "1.2.2"
stopper = "0.2.0"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
